# AI-Learning-Assistant-RPG-Archive

./: .env  .gitignore  .pre-commit-config.yaml  Makefile  README.md  dify.yml  docker-compose.yml  llm_config.yaml.example  main.py  pyproject.toml
app/: __init__.py  main.py
app/agent/: base_agent.py  chatagent.py
app/api/: agents.py  models.py  sillytavern.py  store.py
app/chain/: chatchain.py
app/craftcard/: configuration.py  craftcard_agent.py  graph.py  prompts.py  state.py
app/models/: card.py  llm.py  schemas.py  store.py
app/services/: __init__.py  store_service.py
app/utils/: http_client.py  llm_client.py  logger.py  middleware.py  model_config.py
config/: settings.py
