[project]
name = "AI-LEARNING-ASSISTANT-RPG-ARCHIVE"
version = "0.1.0"
description = "FastAPI AI Learning Assistant with Local LLM Support"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.10.0",
    "pydantic-settings>=2.10.1",
    "ruff>=0.12.11",
    "langgraph>=0.6.7",
    "langchain-openai>=0.3.34",
    "pre-commit>=4.3.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pre-commit>=4.2.0",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "B",
    "SIM",
    "C4",
    "E4", "E9", "E7", "F",
    "I"
]
